Fix #1, prevent text wrapping in aligned

--- a/source/wasm/prestatic/malarkdowney.css
+++ b/source/wasm/prestatic/malarkdowney.css
@@ -14,4 +14,5 @@ codeline {
   position: relative;
   display: inline-block;
   width: 0;
+  text-wrap: nowrap;
 }
